[metadata]
name = asyncio-taskpool
version = 0.1.7
author = Daniil Fajnberg
author_email = mail@daniil.fajnberg.de
description = Dynamically manage pools of asyncio tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.fajnberg.de/daniil/asyncio-taskpool
project_urls =
    Bug Tracker = https://git.fajnberg.de/daniil/asyncio-taskpool/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    coverage

[options.packages.find]
where = src
