[metadata]
name = asyncio-taskpool
version = 0.2.1
author = Daniil Fajnberg
author_email = mail@daniil.fajnberg.de
description = Dynamically manage pools of asyncio tasks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = asyncio, concurrency, tasks, coroutines, asynchronous, server
url = https://git.fajnberg.de/daniil/asyncio-taskpool
project_urls =
    Bug Tracker = https://git.fajnberg.de/daniil/asyncio-taskpool/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Framework :: AsyncIO
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    coverage

[options.packages.find]
where = src
